solved problem with gtest

--- a/homework_3/CMakeLists.txt
+++ b/homework_3/CMakeLists.txt
@@ -1,11 +1,25 @@
-cmake_minimum_required(VERSION 3.5)
-set (CMAKE_CXX_STANDARD 11)
-set(PROJECT_NAME "date_test")
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+cmake_minimum_required(VERSION 3.1)
 
-add_executable(${PROJECT_NAME} 
-${CMAKE_CURRENT_SOURCE_DIR}/src/date.cpp
-${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+project(date_test)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_executable(date_test
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/date.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES} pthread -std=c++11)
+target_include_directories(date_test PUBLIC
+    project
+)
+set_target_properties(date_test PROPERTIES
+    CXX_STANDARD 14
+)
+
+target_sources(date_test PRIVATE
+    ../googletest/googletest/src/gtest-all.cc
+)
+target_include_directories(date_test PRIVATE
+    ../googletest/googletest
+    ../googletest/googletest/include
+)
+target_link_libraries(date_test
+    pthread
+)
