--- a/homework_4/CMakeLists.txt
+++ b/homework_4/CMakeLists.txt
@@ -1,11 +1,25 @@
-cmake_minimum_required(VERSION 3.5)
-set (CMAKE_CXX_STANDARD 11)
-set(PROJECT_NAME "String_test")
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+cmake_minimum_required(VERSION 3.1)
 
-add_executable(${PROJECT_NAME} 
-${CMAKE_CURRENT_SOURCE_DIR}/src/string_m.cpp  
-${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+project(String_test)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_executable(String_test
+    	${CMAKE_CURRENT_SOURCE_DIR}/src/string_m.cpp  
+	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES} pthread -std=c++11)
+target_include_directories(String_test PUBLIC
+    project
+)
+set_target_properties(String_test PROPERTIES
+    CXX_STANDARD 14
+)
+
+target_sources(String_test PRIVATE
+    ../googletest/googletest/src/gtest-all.cc
+)
+target_include_directories(String_test PRIVATE
+    ../googletest/googletest
+    ../googletest/googletest/include
+)
+target_link_libraries(String_test
+    pthread
+)
