--- a/homework_5/CMakeLists.txt
+++ b/homework_5/CMakeLists.txt
@@ -1,12 +1,26 @@
-cmake_minimum_required(VERSION 3.5)
-set (CMAKE_CXX_STANDARD 11)
-set(PROJECT_NAME "port_test")
-find_package(GTest REQUIRED)
-include_directories(${GTEST_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/include)
+cmake_minimum_required(VERSION 3.1)
 
-add_executable(${PROJECT_NAME} 
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/port.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/vintage_port.cpp
+project(port_test)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_executable(port_test
+    	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
+    	${CMAKE_CURRENT_SOURCE_DIR}/src/port.cpp
+    	${CMAKE_CURRENT_SOURCE_DIR}/src/vintage_port.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES} pthread -std=c++11)
+target_include_directories(port_test PUBLIC
+    project
+)
+set_target_properties(port_test PROPERTIES
+    CXX_STANDARD 14
+)
+
+target_sources(port_test PRIVATE
+    ../googletest/googletest/src/gtest-all.cc
+)
+target_include_directories(port_test PRIVATE
+    ../googletest/googletest
+    ../googletest/googletest/include
+)
+target_link_libraries(port_test
+    pthread
+)
